@@ -1,5 +1,9 @@
 2000-06-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
+	* scheduler/mailq.c:
+	    Count files in POSTOFFICE/router/ directory also when
+	    it is subdir-hashed..
+
 	* router/daemonsub.c:
 	    Tried actually to use ROUTERDIRHASH=1 mode, and learned
 	    of bitter errors at the subchild feeder code...  Dirname
